@@ -13,6 +13,8 @@ Regina - A Normal Surface Theory Calculator
             - New classes.
         Class NDiscSetSurface:
             - Modified parameters for adjacentDisc().
+        Class NFace:
+            - Added getType(), getSubtype(), isMobiusBand(), isCone().
         Class NNormalSurface:
             - Fixed isOrientable() and added isTwoSided().
         Class NPerm:
@@ -35,6 +37,8 @@ Regina - A Normal Surface Theory Calculator
             - Fixed bug where icon was sometimes not displayed.
         normal.packetui.triangulation.CompositionViewer:
             - Displays more detailed information.
+        normal.packetui.triangulation.SkeletonTableFrame:
+            - Displays more details regarding face/vertex type.
 
 Version 2.2  [ 7 October, 2001 ]
     OVERALL:
